--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <h1>Rimini Photo Enhance</h1>
+    <h1>Rimini Photo Enhance Tool</h1>
   </header>
 
   <div class="container">
